added class City with getters and setters.

--- a/OEF_1.1_OOP/templates/column.html
+++ b/OEF_1.1_OOP/templates/column.html
@@ -7,5 +7,8 @@
     <img alt=@img_title@ class="img-fluid" src="img/@img_filename@">
 
     <a href=stad_form.php?img_id=@img_id@>Meer info</a>
+    <br>
+    <a href=stad.php?img_id=@img_id@>Stad OO Style</a>
+
 
 </div>
