--- a/OEF_2.1_OOP/templates/column.html
+++ b/OEF_2.1_OOP/templates/column.html
@@ -3,8 +3,8 @@
     <h3>@img_title@</h3>
     <p>@img_width@ x @img_height@ pixels</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-    <p>Weer: @clouds@, @temp@ °C  </p>
-    <p>Vochtigheid: @humidity@</p>
+    <p>Weer: @clouds@, @temp@ °C Vochtigheid: @humidity@ </p>
+    <p>@weather_icon@</p>
 
     <img alt=@img_title@ class="img-fluid" src="img/@img_filename@">
 
