--- a/OEF_2.2_OOP/templates/navbar.html
+++ b/OEF_2.2_OOP/templates/navbar.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="showLog.php">Show Log</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="api.php">Request BTW</a>
+                <a class="nav-link" href="edit_btw.php">Request BTW</a>
             </li>
 
         </ul>
